Fixed whitespace

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -56,7 +56,7 @@ img, svg {
     }
 
     header {
-        @apply mb-8 pt-8;
+        @apply pt-8 font-kb-extras;
     }
 
     header p{
@@ -93,7 +93,7 @@ img, svg {
     }
 
     main p > img {
-        @apply my-8;
+        @apply mb-4;
     }
 
     footer {
@@ -171,16 +171,12 @@ img, svg {
 
     /* NAV COMPONENT */
 
-    header {
-        @apply font-kb-extras;
-    }
-
     header nav {
         @apply p-4;
     }
 
     .nav-Menu {
-        @apply flex flex-row gap-4 lg:gap-12 pb-4;
+        @apply flex flex-row gap-4 lg:gap-12;
         justify-content: center;
     }
 
